crates/executor/src/tests/sql/physical_optimizer/snapshots/list_field_metadata/query_list_field_metadata_array.snap
---
source: crates/executor/src/tests/sql/physical_optimizer/list_field_metadata.rs
description: "\"SELECT * FROM array\""
info: "Setup queries: CREATE TABLE array as (SELECT [1,2]::ARRAY as test)"
---
Ok(
    [
        "+--------+",
        "| test   |",
        "+--------+",
        "| [1, 2] |",
        "+--------+",
    ],
)
