crates/executor/src/tests/sql/physical_optimizer/snapshots/list_field_metadata/query_list_field_metadata_arrays_column.snap
---
source: crates/executor/src/tests/sql/physical_optimizer/list_field_metadata.rs
description: "\"SELECT * FROM array\""
info: "Setup queries: CREATE TABLE array as (SELECT arr FROM VALUES ([1,2]::ARRAY),([1,2]::ARRAY) AS t(arr))"
---
Ok(
    [
        "+--------+",
        "| arr    |",
        "+--------+",
        "| [1, 2] |",
        "| [1, 2] |",
        "+--------+",
    ],
)
