crates/executor/src/tests/sql/physical_optimizer/snapshots/list_field_metadata/query_list_field_metadata_arrays_with_column_cast.snap
---
source: crates/executor/src/tests/sql/physical_optimizer/list_field_metadata.rs
description: "\"SELECT * FROM array\""
info: "Setup queries: CREATE TABLE array as (SELECT arr::ARRAY as arr FROM VALUES ([1,2]),([1,2]) AS t(arr))"
---
Ok(
    [
        "+--------+",
        "| arr    |",
        "+--------+",
        "| [1, 2] |",
        "| [1, 2] |",
        "+--------+",
    ],
)
