crates/executor/src/tests/sql/physical_optimizer/snapshots/list_field_metadata/query_list_field_metadata_literal.snap
---
source: crates/executor/src/tests/sql/physical_optimizer/list_field_metadata.rs
description: "\"SELECT * FROM array\""
info: "Setup queries: CREATE TABLE array as (SELECT 'A'::ARRAY as test)"
---
Ok(
    [
        "+------+",
        "| test |",
        "+------+",
        "| [A]  |",
        "+------+",
    ],
)
